@@ -23,19 +23,22 @@ define('CRYPTOGRAPHP_VERSION', '1beta2');
  * @return string
  */
 function cryptographp_version() {
+    global $pth;
+
     return '<h1><a href="http://3-magi.net/?CMSimple_XH/Cryptographp_XH">Cryptographp_XH</a></h1>'."\n"
-	    .'<p>Version: '.CRYPTOGRAPHP_VERSION.'</p>'."\n"
+	    .tag('img class="cryptographp_plugin_icon" src="'.$pth['folder']['plugins'].'cryptographp/cryptographp.png" alt="Plugin icon"')."\n"
+	    .'<p style="margin-top: 1em">Version: '.CRYPTOGRAPHP_VERSION.'</p>'."\n"
 	    .'<p>Copyright &copy; 2006-2007 <a href="http://www.captcha.fr/">Sylvain Brison</a>'.tag('br')
 	    .'Copyright &copy; 2011-2012 <a href="http://3-magi.net/">Christoph M. Becker</a></p>'."\n"
-	    .'<p style="text-align:justify">This program is free software: you can redistribute it and/or modify'
+	    .'<p class="cryptographp_license">This program is free software: you can redistribute it and/or modify'
 	    .' it under the terms of the GNU General Public License as published by'
 	    .' the Free Software Foundation, either version 3 of the License, or'
 	    .' (at your option) any later version.</p>'."\n"
-	    .'<p style="text-align:justify">This program is distributed in the hope that it will be useful,'
+	    .'<p class="cryptographp_license">This program is distributed in the hope that it will be useful,'
 	    .' but WITHOUT ANY WARRANTY; without even the implied warranty of'
 	    .' MERCHAN&shy;TABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the'
 	    .' GNU General Public License for more details.</p>'."\n"
-	    .'<p style="text-align:justify">You should have received a copy of the GNU General Public License'
+	    .'<p class="cryptographp_license">You should have received a copy of the GNU General Public License'
 	    .' along with this program.  If not, see'
 	    .' <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</p>'."\n";
 }
@@ -163,7 +166,7 @@ $crypthographp_config = array(
 function cryptographp_update_config() {
     global $pth;
 
-    $fn = $pth['folder']['plugins'].'cryptographp/cmsimple.cfg.php';
+    $fn = $pth['folder']['plugins'].'cryptographp/config/cryptographp.cfg.php';
     if (filemtime($pth['folder']['plugins'].'cryptographp/config/config.php') > filemtime($fn)) {
 	if (($fh = fopen($fn, 'w')) === FALSE || fwrite($fh, cryptograph_config()) === FALSE) {
 	    e('cntsave', 'file', $fn);
